# LepusEngine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LepusEngine.sln  Makefile  README.md  genie.lua  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
Content/GLSL/: Diffuse.frag  PerVertexUnlit.frag  PerVertexUnlit.vert  Phong.frag  Phong.geom  Phong.vert  Unlit.frag  Unlit.vert
Content/GLSL/Unlit/: RGBVertex.frag  RGBVertex.vert
Content/Models/: mycube_test.dae  mycube_test.fbx  urmumjeff.blend  urmumjeff.mtl  uv_cube.blend  uv_cube.mtl
Content/Models/sponza_lw/sponza/objects/: sponza.lwo
Content/Models/sponza_lw/sponza/scenes/: sponza.lws
Lepus3D/: Lepus3D.vcxproj  Lepus3D.vcxproj.filters
Lepus3D/Source/: Camera.h  Color.h  Light.h  Material.h  Mesh.h  RenderEngine.h  Renderable.h  Scene.h  Shader.h  Texture.h  Transform.h  Vertex.h  Window.h  main.cpp
Lepus3D/Source/Assets/: ModelImporter.cpp  ModelImporter.h
Lepus3D/Source/Camera/: Camera.cpp  FPPCamera.cpp  FPPCamera.h
Lepus3D/Source/Color/: Color.cpp
Lepus3D/Source/GL/: glfunc.h
Lepus3D/Source/GLSL/: Diffuse.frag  Diffuse.vert  PerVertexUnlit.frag  PerVertexUnlit.vert  Phong.frag  Phong.vert  Unlit.frag  Unlit.vert
Lepus3D/Source/Light/: Light.cpp
Lepus3D/Source/Material/: Material.cpp  MaterialAttrib.h
Lepus3D/Source/Mesh/: Mesh.cpp
Lepus3D/Source/RenderEngine/: RenderEngine.cpp
Lepus3D/Source/Scene/: Scene.cpp
Lepus3D/Source/Shader/: SLProgram.cpp  SLProgram.h  Shader.cpp
Lepus3D/Source/Texture/: Texture2D.cpp
Lepus3D/Source/Transform/: Transform.cpp  Vector.h
LepusDemo/: LepusDemo.vcxproj
LepusDemo/Source/: main.cpp
LepusEngine/: LepusEngine.vcxproj  LepusEngine.vcxproj.filters
LepusEngine/Source/: Logger.h
LepusEngine/Source/Logger/: Logger.cpp
LepusEngine/Source/Physics/: Physics.cpp  PhysicsRigidbody.cpp
scripts/: install-ubuntu.sh
src/L3D/: Assets.h  Camera.h  Color.h  Geometry.h  GraphicsEngine.h  Light.h  Material.h  Mesh.h  Quaternion.h  RenderEngine.h  Renderable.h  Scene.h  Shader.h  Texture.h  Transform.h  Vertex.h
src/L3D/Assets/: ModelImporter.cpp  ModelImporter.h
src/L3D/Camera/: Camera.cpp  FPPCamera.cpp  FPPCamera.h
src/L3D/GLSL/: Diffuse.vert
src/L3D/GraphicsEngine/: Apis.h  GraphicsApi.h  GraphicsEngine.cpp  ShaderCompiler.h
src/L3D/GraphicsEngine/Apis/: ApiGL.h
src/L3D/GraphicsEngine/Apis/ApiGL/: ApiGL.cpp  Bindings.h  Types.h
src/L3D/GraphicsEngine/GraphicsApi/: BaseBindings.h  GraphicsApi.cpp  Uniforms.h
src/L3D/GraphicsEngine/ShaderCompilers/: ShaderCompilerGLSL.h
src/L3D/GraphicsEngine/ShaderCompilers/ShaderCompilerGLSL/: ShaderCompilerGLSL.cpp
src/L3D/Light/: Light.cpp
src/L3D/Material/: Material.cpp  MaterialAttrib.h
src/L3D/Mesh/: Mesh.cpp
src/L3D/Quaternion/: Quaternion.cpp
src/L3D/RenderEngine/: RenderEngine.cpp
src/L3D/Renderable/: Renderable.cpp
src/L3D/Scene/: Scene.cpp
src/L3D/Shader/: SLProgram.cpp  SLProgram.h  Shader.cpp
src/L3D/Texture/: Texture2D.cpp
src/L3D/Transform/: Transform.cpp
src/LDemo/: main.cpp
src/LEngine/: ConsoleLogger.h  Entity.h  ILogger.h  ISingleton.h  Logger.h  Physics.h  World.cpp  World.h
src/LEngine/Entity/: Entity.cpp
src/LEngine/Logger/: ConsoleLogger.cpp  Logger.cpp
src/LEngine/Physics/: Physics.cpp  PhysicsRigidbody.cpp  PhysicsRigidbody.h
src/LEngine/World/: World.cpp
src/LSystem/: IO.h  Windowing.h
src/LSystem/IO/: FileSystem.h
src/LSystem/IO/FileSystem/: FileSystem.cpp
src/LSystem/Windowing/: GLFW.h
src/LSystem/Windowing/GLFW/: GLFW.cpp
src/LUtility/: Math.h  Primitives.h
src/LUtility/Types/: Matrix4x4.h  Quaternion.h  String.h  Transform.h  Vector.h  Viewport.h
src/examples/demo/: DemoApp.h  main.cpp
src/lepus/engine/: ConsoleLogger.h  ILogger.h
src/lepus/engine/Logger/: ConsoleLogger.cpp
src/lepus/engine/Objects/: Mesh.h
src/lepus/gfx/: Camera.h  GraphicsEngine.h  Material.h  SceneGraph.h  Shader.h
src/lepus/gfx/GraphicsEngine/: GraphicsApi.h  GraphicsEngine.cpp  ShaderCompiler.h
src/lepus/gfx/GraphicsEngine/Apis/: ApiGL.h
src/lepus/gfx/GraphicsEngine/Apis/ApiGL/: ApiGL.cpp  Bindings.h  Types.h
src/lepus/gfx/GraphicsEngine/Apis/ApiGL/Types/: GLMesh.h  GLShader.h
src/lepus/gfx/GraphicsEngine/Apis/ApiGL/Types/GLMesh/: GLMesh.cpp
src/lepus/gfx/GraphicsEngine/GraphicsApi/: BaseBindings.h  GraphicsApi.cpp  Uniforms.h
src/lepus/gfx/GraphicsEngine/ShaderCompilers/: ShaderCompilerGLSL.h
src/lepus/gfx/GraphicsEngine/ShaderCompilers/ShaderCompilerGLSL/: ShaderCompilerGLSL.cpp
src/lepus/gfx/Material/: MaterialAttributes.h
src/lepus/gfx/SceneGraph/: Renderable.h  SceneNode.h  Transformable.h
src/lepus/system/: BaseApp.h  Windowing.h
src/lepus/system/IO/: FileSystem.h
src/lepus/system/IO/FileSystem/: FileSystem.cpp
src/lepus/system/Windowing/: GLFW.h  Windowing.cpp
src/lepus/system/Windowing/GLFW/: GLFW.cpp
src/lepus/utility/: Math.h  Primitives.h
src/lepus/utility/Primitives/: Shared.cpp
src/lepus/utility/types/: Matrix4x4.h  Quaternion.h  String.h  Transform.h  Vector.h  Viewport.h
tests/L3D/GraphicsEngine/: GraphicsApiOptionsTests.cpp  GraphicsApiOptionsTests.h  GraphicsApiTests.cpp  GraphicsApiTests.h
tests/L3D/SceneGraph/: SceneGraphTests.cpp  SceneGraphTests.h
tests/LSystem/IO/: FileSystemTests.cpp  FileSystemTests.h
tests/LUtility/MathTests/: MatrixTests.cpp  TransformTests.cpp  VectorTests.cpp
